@@ -4,7 +4,8 @@
 
 use strict;
 use Test::More;
-use Test::Spelling;
+eval "use Test::Spelling";
+plan skip_all => "Test::Spelling required for testing POD spelling" if $@;
 
 add_stopwords(<DATA>);
 all_pod_files_spelling_ok();
